# pthash

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RESULTS.md  TODO.md
.github/workflows/: CI.yml  build.yml  codeql.yml
benchmarks/: README.md
benchmarks/results-07-09-25/: results.2025-09-07T17-31-42.n=100000000.json
bucket_mappings/: optimizedBucketMapping.csv
include/: dense_partitioned_phf.hpp  partitioned_mphf.hpp  partitioned_phf.hpp  pthash.hpp  single_mphf.hpp  single_phf.hpp
include/builders/: external_memory_builder_partitioned_mphf.hpp  external_memory_builder_partitioned_phf.hpp  external_memory_builder_single_mphf.hpp  external_memory_builder_single_phf.hpp  external_memory_util.hpp  internal_memory_builder_partitioned_mphf.hpp  internal_memory_builder_partitioned_phf.hpp  internal_memory_builder_single_mphf.hpp  internal_memory_builder_single_phf.hpp  search.hpp  search_add.hpp  search_util.hpp  search_xor.hpp  util.hpp
include/encoders/: bit_vector.hpp  compact_vector.hpp  darray.hpp  dense_encoders.hpp  ef_sequence.hpp  encoders.hpp  golomb_sequence.hpp  rice_sequence.hpp  sdc_sequence.hpp  util.hpp
include/utils/: bucketers.hpp  dense_encoders.hpp  encoders.hpp  fill_free_slots.hpp  hasher.hpp  logger.hpp  util.hpp
script/: drop_caches.sh  make_markdown_table.py  plot_all.sh  plot_avg_building_time.py  plot_avg_query_time.py  plot_avg_time.py  plot_building_time.py  plot_query_time.py  plot_space.py  results.1000M.json  results.100M.json  run_benchmark.py  run_benchmark.sh
src/: build.cpp  example.cpp  util.hpp
test/: common.hpp  small_test.sh  test_internal_memory_dense_partitioned_mphf.cpp  test_internal_memory_partitioned_mphf.cpp  test_internal_memory_single_mphf.cpp
